updating svm to work and adding urls for pytorch with cuda

--- a/exploration/test.ipynb
+++ b/exploration/test.ipynb
@@ -82,24 +82,24 @@
      "output_type": "stream",
      "text": [
       "Fitting 3 folds for each of 4 candidates, totalling 12 fits\n",
-      "[CV 2/3; 1/4] START lr__C=0.1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear\n",
+      "[CV 3/3; 3/4] START lr__C=1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear\n",
+      "[CV 2/3; 4/4] START lr__C=1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear\n",
+      "[CV 2/3; 3/4] START lr__C=1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear\n",
+      "[CV 1/3; 1/4] START lr__C=0.1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear\n",
       "[CV 3/3; 1/4] START lr__C=0.1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear\n",
-      "[CV 1/3; 3/4] START lr__C=1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear\n",
       "[CV 2/3; 2/4] START lr__C=0.1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear\n",
+      "[CV 2/3; 1/4] START lr__C=0.1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear\n",
       "[CV 3/3; 2/4] START lr__C=0.1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear\n",
       "[CV 1/3; 4/4] START lr__C=1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear\n",
-      "[CV 1/3; 1/4] START lr__C=0.1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear\n",
-      "[CV 2/3; 3/4] START lr__C=1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear[CV 1/3; 2/4] START lr__C=0.1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear\n",
-      "\n",
       "[CV 3/3; 4/4] START lr__C=1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear\n",
-      "[CV 3/3; 3/4] START lr__C=1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear[CV 2/3; 4/4] START lr__C=1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear\n",
-      "\n",
-      "[CV 3/3; 2/4] END lr__C=0.1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear;, score=0.758 total time=  13.0s\n",
-      "[CV 1/3; 2/4] END lr__C=0.1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear;, score=0.753 total time=  14.1s\n",
-      "[CV 2/3; 2/4] END lr__C=0.1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear;, score=0.757 total time=  16.0s\n",
-      "[CV 1/3; 4/4] END lr__C=1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear;, score=0.753 total time=  21.5s\n",
-      "[CV 3/3; 4/4] END lr__C=1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear;, score=0.759 total time=  21.9s\n",
-      "[CV 2/3; 4/4] END lr__C=1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear;, score=0.757 total time=  28.3s\n"
+      "[CV 1/3; 2/4] START lr__C=0.1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear\n",
+      "[CV 1/3; 3/4] START lr__C=1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear\n",
+      "[CV 3/3; 2/4] END lr__C=0.1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear;, score=0.758 total time=  18.1s\n",
+      "[CV 2/3; 2/4] END lr__C=0.1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear;, score=0.757 total time=  18.8s\n",
+      "[CV 1/3; 2/4] END lr__C=0.1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear;, score=0.753 total time=  19.1s\n",
+      "[CV 3/3; 4/4] END lr__C=1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear;, score=0.759 total time=  26.6s\n",
+      "[CV 1/3; 4/4] END lr__C=1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear;, score=0.753 total time=  27.6s\n",
+      "[CV 2/3; 4/4] END lr__C=1, lr__max_iter=500, lr__penalty=l2, lr__solver=liblinear;, score=0.757 total time=  31.1s\n"
      ]
     },
     {
@@ -114,7 +114,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV 2/3; 3/4] END lr__C=1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear;, score=0.710 total time= 2.3min\n"
+      "[CV 3/3; 3/4] END lr__C=1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear;, score=0.709 total time= 3.2min\n"
      ]
     },
     {
@@ -129,7 +129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV 3/3; 3/4] END lr__C=1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear;, score=0.710 total time= 2.4min\n"
+      "[CV 1/3; 1/4] END lr__C=0.1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear;, score=0.706 total time= 3.2min\n"
      ]
     },
     {
@@ -144,25 +144,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV 1/3; 3/4] END lr__C=1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear;, score=0.706 total time= 2.4min\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/drumblum/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.11/site-packages/sklearn/svm/_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  warnings.warn(\n",
-      "/home/drumblum/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.11/site-packages/sklearn/svm/_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[CV 3/3; 1/4] END lr__C=0.1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear;, score=0.709 total time= 2.5min\n",
-      "[CV 1/3; 1/4] END lr__C=0.1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear;, score=0.706 total time= 2.5min\n"
+      "[CV 3/3; 1/4] END lr__C=0.1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear;, score=0.710 total time= 3.4min\n"
      ]
     },
     {
@@ -177,7 +159,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV 2/3; 1/4] END lr__C=0.1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear;, score=0.710 total time= 2.5min\n"
+      "[CV 2/3; 1/4] END lr__C=0.1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear;, score=0.711 total time= 3.4min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/drumblum/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.11/site-packages/sklearn/svm/_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV 2/3; 3/4] END lr__C=1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear;, score=0.710 total time= 3.4min\n",
+      "[CV 1/3; 3/4] END lr__C=1, lr__max_iter=500, lr__penalty=l1, lr__solver=liblinear;, score=0.706 total time= 3.4min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/drumblum/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.11/site-packages/sklearn/svm/_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -351,12 +357,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "delay_df = df[df['ArrDel15'] > 0.5].sample(n=6000)\n",
-    "ontime_df = df[df['ArrDel15'] <= 0.5].sample(n=4000)\n",
+    "delay_df = df[df['ArrDel15'] > 0.5].sample(n=2000)\n",
+    "ontime_df = df[df['ArrDel15'] <= 0.5].sample(n=8000)\n",
     "fake_df = pd.concat([delay_df, ontime_df], ignore_index=True)\n",
     "\n",
     "x = fake_df.drop(columns=['ArrDel15'])\n",
@@ -366,17 +372,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "svm_pipeline = models.get_pipeline(ModelENUM.SVM)\n",
     "param_grid = [\n",
-    "    models.get_svm_param(gamma=[2], c_list=[1e-2], coef0=[1], kernel=['linear'])\n",
+    "    models.get_svm_param(gamma=[2, 3, 4], c_list=[1e-2, 1e-1, 1], coef0=[0, 1], kernel=['linear', 'poly'])\n",
     "]\n",
     "grid_search = models.get_grid_search_cv(\n",
     "    pipeline=svm_pipeline, param_grid=param_grid, cv=2, n_jobs=20\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10000, 121)\n",
+      "(10000, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x.shape)\n",
+    "print(y.shape)"
    ]
   },
   {
@@ -388,35 +413,78 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1000, 121)\n",
-      "(1000, 1)\n"
+      "Fitting 2 folds for each of 2 candidates, totalling 4 fits\n",
+      "[CV 1/2; 1/2] START svm__C=0.01, svm__gamma=2, svm__kernel=linear...............\n",
+      "[CV 2/2; 1/2] START svm__C=0.01, svm__gamma=2, svm__kernel=linear...............\n",
+      "[CV 1/2; 2/2] START svm__C=0.01, svm__gamma=2, svm__kernel=poly.................\n",
+      "[CV 2/2; 2/2] START svm__C=0.01, svm__gamma=2, svm__kernel=poly.................\n",
+      "[CV 1/2; 1/2] END svm__C=0.01, svm__gamma=2, svm__kernel=linear;, score=0.638 total time=   0.8s\n",
+      "[CV 2/2; 1/2] END svm__C=0.01, svm__gamma=2, svm__kernel=linear;, score=0.619 total time=   0.7s\n",
+      "[CV 1/2; 2/2] END svm__C=0.01, svm__gamma=2, svm__kernel=poly;, score=0.517 total time=   8.1s\n",
+      "[CV 2/2; 2/2] END svm__C=0.01, svm__gamma=2, svm__kernel=poly;, score=0.484 total time=   8.8s\n"
      ]
     }
    ],
    "source": [
-    "print(x.shape)\n",
-    "print(y.shape)"
+    "svm_model = grid_search.fit(x_train, y_train.to_numpy().ravel())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 2 folds for each of 1 candidates, totalling 2 fits\n",
-      "[CV 1/2; 1/1] START svm__C=0.01, svm__gamma=2, svm__kernel=linear...............\n",
-      "[CV 1/2; 1/1] END svm__C=0.01, svm__gamma=2, svm__kernel=linear;, score=0.746 total time=   0.0s\n",
-      "[CV 2/2; 1/1] START svm__C=0.01, svm__gamma=2, svm__kernel=linear...............\n",
-      "[CV 2/2; 1/1] END svm__C=0.01, svm__gamma=2, svm__kernel=linear;, score=0.708 total time=   0.0s\n"
+      "{'gamma': 2, 'kernel': 'linear', 'C': 0.01}\n"
      ]
     }
    ],
    "source": [
-    "svm_model = grid_search.fit(x_train, y_train.to_numpy().ravel())"
+    "# models.analyze_model(svm_model, x_test, x_train, y_test, y_train)\n",
+    "print(models.get_best_params(models.ModelENUM.SVM, svm_model))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "414\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "predict_proba is not available when  probability=False",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[15], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m number_true \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mcount_nonzero(y_test \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[39mprint\u001b[39m(number_true)\n\u001b[0;32m----> 4\u001b[0m y_prob \u001b[39m=\u001b[39m svm_model\u001b[39m.\u001b[39;49mpredict_proba(x_test)[:, \u001b[39m1\u001b[39m]\n\u001b[1;32m      5\u001b[0m y_pred \u001b[39m=\u001b[39m svm_model\u001b[39m.\u001b[39mpredict(x_test)\n\u001b[1;32m      6\u001b[0m plots\u001b[39m.\u001b[39msave_precision_recall_curve(\u001b[39m\"\u001b[39m\u001b[39mlr\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mtest_file\u001b[39m\u001b[39m\"\u001b[39m, y_test, y_prob)\n",
+      "File \u001b[0;32m~/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.11/site-packages/sklearn/utils/_available_if.py:32\u001b[0m, in \u001b[0;36m_AvailableIfDescriptor.__get__\u001b[0;34m(self, obj, owner)\u001b[0m\n\u001b[1;32m     26\u001b[0m attr_err \u001b[39m=\u001b[39m \u001b[39mAttributeError\u001b[39;00m(\n\u001b[1;32m     27\u001b[0m     \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mThis \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mrepr\u001b[39m(owner\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m)\u001b[39m}\u001b[39;00m\u001b[39m has no attribute \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mrepr\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mattribute_name)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m     28\u001b[0m )\n\u001b[1;32m     29\u001b[0m \u001b[39mif\u001b[39;00m obj \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m     30\u001b[0m     \u001b[39m# delegate only on instances, not the classes.\u001b[39;00m\n\u001b[1;32m     31\u001b[0m     \u001b[39m# this is to allow access to the docstrings.\u001b[39;00m\n\u001b[0;32m---> 32\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcheck(obj):\n\u001b[1;32m     33\u001b[0m         \u001b[39mraise\u001b[39;00m attr_err\n\u001b[1;32m     34\u001b[0m     out \u001b[39m=\u001b[39m MethodType(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfn, obj)\n",
+      "File \u001b[0;32m~/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.11/site-packages/sklearn/model_selection/_search.py:362\u001b[0m, in \u001b[0;36m_estimator_has.<locals>.check\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    359\u001b[0m _check_refit(\u001b[39mself\u001b[39m, attr)\n\u001b[1;32m    360\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mhasattr\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mbest_estimator_\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[1;32m    361\u001b[0m     \u001b[39m# raise an AttributeError if `attr` does not exist\u001b[39;00m\n\u001b[0;32m--> 362\u001b[0m     \u001b[39mgetattr\u001b[39;49m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbest_estimator_, attr)\n\u001b[1;32m    363\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m    364\u001b[0m \u001b[39m# raise an AttributeError if `attr` does not exist\u001b[39;00m\n",
+      "File \u001b[0;32m~/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.11/site-packages/sklearn/utils/_available_if.py:32\u001b[0m, in \u001b[0;36m_AvailableIfDescriptor.__get__\u001b[0;34m(self, obj, owner)\u001b[0m\n\u001b[1;32m     26\u001b[0m attr_err \u001b[39m=\u001b[39m \u001b[39mAttributeError\u001b[39;00m(\n\u001b[1;32m     27\u001b[0m     \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mThis \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mrepr\u001b[39m(owner\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m)\u001b[39m}\u001b[39;00m\u001b[39m has no attribute \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mrepr\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mattribute_name)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m     28\u001b[0m )\n\u001b[1;32m     29\u001b[0m \u001b[39mif\u001b[39;00m obj \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m     30\u001b[0m     \u001b[39m# delegate only on instances, not the classes.\u001b[39;00m\n\u001b[1;32m     31\u001b[0m     \u001b[39m# this is to allow access to the docstrings.\u001b[39;00m\n\u001b[0;32m---> 32\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcheck(obj):\n\u001b[1;32m     33\u001b[0m         \u001b[39mraise\u001b[39;00m attr_err\n\u001b[1;32m     34\u001b[0m     out \u001b[39m=\u001b[39m MethodType(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfn, obj)\n",
+      "File \u001b[0;32m~/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.11/site-packages/sklearn/pipeline.py:46\u001b[0m, in \u001b[0;36m_final_estimator_has.<locals>.check\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcheck\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m     45\u001b[0m     \u001b[39m# raise original `AttributeError` if `attr` does not exist\u001b[39;00m\n\u001b[0;32m---> 46\u001b[0m     \u001b[39mgetattr\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_final_estimator, attr)\n\u001b[1;32m     47\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mTrue\u001b[39;00m\n",
+      "File \u001b[0;32m~/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.11/site-packages/sklearn/utils/_available_if.py:32\u001b[0m, in \u001b[0;36m_AvailableIfDescriptor.__get__\u001b[0;34m(self, obj, owner)\u001b[0m\n\u001b[1;32m     26\u001b[0m attr_err \u001b[39m=\u001b[39m \u001b[39mAttributeError\u001b[39;00m(\n\u001b[1;32m     27\u001b[0m     \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mThis \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mrepr\u001b[39m(owner\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m)\u001b[39m}\u001b[39;00m\u001b[39m has no attribute \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mrepr\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mattribute_name)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m     28\u001b[0m )\n\u001b[1;32m     29\u001b[0m \u001b[39mif\u001b[39;00m obj \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m     30\u001b[0m     \u001b[39m# delegate only on instances, not the classes.\u001b[39;00m\n\u001b[1;32m     31\u001b[0m     \u001b[39m# this is to allow access to the docstrings.\u001b[39;00m\n\u001b[0;32m---> 32\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcheck(obj):\n\u001b[1;32m     33\u001b[0m         \u001b[39mraise\u001b[39;00m attr_err\n\u001b[1;32m     34\u001b[0m     out \u001b[39m=\u001b[39m MethodType(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfn, obj)\n",
+      "File \u001b[0;32m~/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.11/site-packages/sklearn/svm/_base.py:829\u001b[0m, in \u001b[0;36mBaseSVC._check_proba\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    827\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_check_proba\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m    828\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprobability:\n\u001b[0;32m--> 829\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(\n\u001b[1;32m    830\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mpredict_proba is not available when  probability=False\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    831\u001b[0m         )\n\u001b[1;32m    832\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_impl \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m (\u001b[39m\"\u001b[39m\u001b[39mc_svc\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mnu_svc\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[1;32m    833\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mpredict_proba only implemented for SVC and NuSVC\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: predict_proba is not available when  probability=False"
+     ]
+    }
+   ],
+   "source": [
+    "number_true = np.count_nonzero(y_test == 1)\n",
+    "print(number_true)\n",
+    "\n",
+    "y_prob = svm_model.predict_proba(x_test)[:, 1]\n",
+    "y_pred = svm_model.predict(x_test)\n",
+    "plots.save_precision_recall_curve(\"lr\", \"test_file\", y_test, y_prob)\n",
+    "plots.save_confusion_matrix(\"lr\", \"test_file\", y_test, y_pred)"
    ]
   }
  ],
